--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@
 
 header {
   height: 63px;
-  background-color: #c5c1c0;
+  background: linear-gradient(to bottom, #c5c1c0, grey);
   width: 100%;
   color: #0a1612;
   font-family: 'Armata';
@@ -67,7 +67,8 @@ section {
 .home {
   height: 550px;
   width: 100%;
-  background-color: #0a1612;
+  background: linear-gradient(to bottom right, #0a1612, #141B23);
+
 }
 
 .flex-intro {
@@ -76,6 +77,7 @@ section {
   justify-content: center;
   align-items: center;
   height: 80%;
+  text-align: center;
 }
 
 .flex-intro h1 {
@@ -84,7 +86,6 @@ section {
   border-bottom: 2px solid #1a2930;
   padding-bottom: 12px;
   margin-bottom: 12px;
-  text-shadow: 2px 2px 4px #000000;
   letter-spacing: 2px;
 }
 
@@ -107,16 +108,19 @@ section {
 }
 
 .projects {
-  height: 750px;
+  height: auto;
   width: 100%;
-  background-color: #dbb76f;
+  background-color: #f7ce3e;
   text-align: center;
+  display: flex;
+  flex-direction: column;
 }
 
 .projects h1 {
-  margin-top: 35px;
-  margin-bottom: 25px;
-  font-size: 30px;
+  margin-top: 40px;
+  margin-bottom: 70px;
+  font-size: 40px;
+  font-weight: 600;
   border-bottom: 2px solid #1a2930;
   display: inline-block;
   text-align: center;
@@ -128,13 +132,18 @@ section {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
-  align-content: space-around;
   margin: 0 auto;
 }
 
-.flex-projects img {
+.flex-projects a {
   display: inline-block;
-
+  margin: 0 25px 70px 25px;
+  display: flex;
+  flex-direction: column;
+  font-size: 18px;
+}
+.flex-projects img{
+  margin-bottom: 20px;
 }
 
 
