--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,7 @@ header {
   width: 100%;
   color: #0a1612;
   font-family: 'Armata';
+    position:fixed;
 }
 
 #logo {
@@ -68,7 +69,6 @@ section {
   height: 550px;
   width: 100%;
   background: linear-gradient(to bottom right, #0a1612, #141B23);
-
 }
 
 .flex-intro {
@@ -114,6 +114,7 @@ section {
   text-align: center;
   display: flex;
   flex-direction: column;
+  color:#0a1612;
 }
 
 .projects h1 {
@@ -137,19 +138,41 @@ section {
 
 .flex-projects a {
   display: inline-block;
-  margin: 0 25px 70px 25px;
+  margin: 0 15px 50px 15px;
   display: flex;
   flex-direction: column;
   font-size: 18px;
 }
-.flex-projects img{
+
+.flex-projects img {
   margin-bottom: 20px;
 }
+.about{
+  height: auto;
+  width: 100%;
+  padding-bottom: 50px;
+  background-color: #1a2930;
+  color: white;
+  display: flex;
+  flex-direction: column;
+}
+.about h1{
+  font-size: 40px;
+  font-weight: 600;
+  border-bottom: 2px solid white;
+  margin: 40px auto 0px;
+}
+.about-flex{
+  width: 65%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  margin: 0 auto;
+}
+.about-flex h2{
+  margin-bottom: 24px;
+  margin-top: 55px;
+  font-size: 22px;
 
-
-/*
-#984b43 rusty red
-#233237 gunmetal
-#18121E navy blue
-#EAC67A warm yellow
-*/
+}
