--- a/css/style.css
+++ b/css/style.css
@@ -66,12 +66,13 @@ section {
 }
 
 .home {
-  height: 600px;
+  height: 700px;
   width: 100%;
   background: linear-gradient(to bottom right, #0a1612, #141B23);
   display: flex;
   flex-direction: column;
   justify-content: center;
+
 }
 
 .flex-intro {
@@ -115,6 +116,7 @@ section {
   border: 1px solid white;
   box-shadow: 8px 8px 12px;
   border-radius: 4px;
+  cursor: pointer;
 }
 
 .arrow {
@@ -137,9 +139,12 @@ section {
   flex-direction: column;
   color: #0a1612;
 }
-
+.offset{
+  height: 25px;
+  width: auto;
+}
 .projects h1 {
-  margin-top: 40px;
+  margin-top: 20px;
   margin-bottom: 70px;
   font-size: 40px;
   font-weight: 600;
@@ -183,7 +188,7 @@ section {
   font-size: 40px;
   font-weight: 600;
   border-bottom: 2px solid white;
-  margin: 40px auto 0px;
+  margin: 30px auto 0px;
 }
 
 .about-flex {
@@ -193,6 +198,7 @@ section {
   justify-content: center;
   text-align: center;
   margin: 0 auto;
+  line-height: 25px;
 }
 
 .about-flex h2 {
@@ -203,7 +209,7 @@ section {
 .contact {
   height: auto;
   width: 100%;
-  padding-bottom: 50px;
+  padding-bottom: 150px;
   background-color: #0a1612;
   color: white;
   display: flex;
@@ -213,5 +219,24 @@ section {
   font-size: 40px;
   font-weight: 600;
   border-bottom: 2px solid white;
-  margin: 40px auto 0px;
+  margin: 40px auto 20px;
+}
+.contact-flex {
+  width: 65%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  margin: 0 auto;
+}
+.contact-flex h2{
+  letter-spacing: 3px;
+  margin-top: 55px;
+  font-size: 32px;
+}
+.contact-flex a{
+  margin-bottom: 30px;
+  margin-top: 50px;
+  font-size: 32px;
+  color:white;
 }
