--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,7 @@ header {
   color: #0a1612;
   font-family: 'Armata';
   position: fixed;
+  z-index: 1;
 }
 
 #logo {
@@ -184,6 +185,14 @@ section {
   border-bottom: 2px solid #1a2930;
   display: inline-block;
   text-align: center;
+}
+img{
+  width: 400px;
+  height: 300px;
+  transition: all 0.1s ease;
+}
+img:hover{
+  transform: scale(1.1);
 }
 
 .flex-projects {
