--- a/css/style.css
+++ b/css/style.css
@@ -186,14 +186,6 @@ section {
   display: inline-block;
   text-align: center;
 }
-img{
-  width: 400px;
-  height: 300px;
-  transition: all 0.1s ease;
-}
-img:hover{
-  transform: scale(1.1);
-}
 
 .flex-projects {
   max-width: 1100px;
@@ -224,6 +216,14 @@ img:hover{
 
 .flex-projects img {
   margin-bottom: 20px;
+  width: 400px;
+  height: 300px;
+  -webkit-transition: all 0.1s ease;
+  transition: all 0.1s ease;
+}
+.flex-projects img:hover{
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
 }
 
 .about {
