--- a/css/style.css
+++ b/css/style.css
@@ -60,11 +60,10 @@ header li a:hover {
   padding-bottom: 4px;
 }
 
-
 /********SECTION**********/
 
 section {
-  font-family: 'Rubik', sans-serif;
+  font-family: 'Open Sans', sans-serif;
 }
 
 .home {
@@ -77,12 +76,11 @@ section {
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-
+  -ms-flex-pack: center;
+  justify-content: center;
 }
 
 .flex-intro {
@@ -91,11 +89,11 @@ section {
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   margin-top: auto;
   text-align: center;
 }
@@ -122,10 +120,10 @@ section {
   display: -ms-flexbox;
   display: flex;
   -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+  flex-wrap: wrap;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   margin-top: 10px;
 }
 
@@ -138,7 +136,7 @@ section {
   background: linear-gradient(to top, #c5c1c0, #7f7f7f);
   border: 1px solid white;
   -webkit-box-shadow: 8px 8px 12px;
-          box-shadow: 8px 8px 12px;
+  box-shadow: 8px 8px 12px;
   border-radius: 4px;
   cursor: pointer;
 }
@@ -150,8 +148,8 @@ section {
   display: inline-flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
   margin-top: auto;
   text-align: center;
   padding-bottom: 10px;
@@ -169,17 +167,13 @@ section {
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
   color: #0a1612;
 }
-.offset{
-  height: 25px;
-  width: auto;
-}
+
 .projects h1 {
-  margin-top: 20px;
-  margin-bottom: 70px;
+  margin: 50px auto 70px;
   font-size: 40px;
   font-weight: 600;
   border-bottom: 2px solid #1a2930;
@@ -194,9 +188,9 @@ section {
   display: -ms-flexbox;
   display: flex;
   -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+  flex-wrap: wrap;
   -ms-flex-pack: distribute;
-      justify-content: space-around;
+  justify-content: space-around;
   margin: 0 auto;
 }
 
@@ -208,8 +202,8 @@ section {
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
   font-size: 22px;
   font-weight: bold;
 }
@@ -221,9 +215,10 @@ section {
   -webkit-transition: all 0.1s ease;
   transition: all 0.1s ease;
 }
-.flex-projects img:hover{
+
+.flex-projects img:hover {
   -webkit-transform: scale(1.1);
-          transform: scale(1.1);
+  transform: scale(1.1);
 }
 
 .about {
@@ -237,44 +232,59 @@ section {
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
 }
 
 .about h1 {
   font-size: 40px;
   font-weight: 600;
   border-bottom: 2px solid white;
-  margin: 30px auto 0px;
+  margin: 50px auto 50px;
+}
+
+#myPic {
+  border-radius: 180px;
+  width: 300px;
+  margin-bottom: 20px;
 }
 
 .about-flex {
-  width: 65%;
-  display: -webkit-box;
-  display: -ms-flexbox;
+  width: 70%;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  text-align: left;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
   margin: 0 auto;
-  line-height: 25px;
+  flex-wrap: wrap;
 }
 
-.about-flex h2 {
-  margin-bottom: 24px;
-  margin-top: 55px;
-  font-size: 24px;
-  font-weight: bold;
-  letter-spacing: 3px;
+.about-left{
+  font-size: 50px;
+  line-height: 60px;
+  text-align: center;
 }
-.about p{
-  font-size: 18px;
+.about-right{
+  width: 400px;
+  margin-top: 40px;
 }
+#preSkills{
+font-size: 20px;
+line-height: 25px;
+margin-bottom: 20px;
+}
+dl{
+  line-height: 35px;
+}
+dt{
+  text-decoration: underline;
+  font-size: 20px;
+}
+dd{
+  margin-bottom: 15px;
+  font-size: 20px;
+}
+
 .contact {
   height: auto;
   width: 100%;
@@ -286,15 +296,17 @@ section {
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
 }
+
 .contact h1 {
   font-size: 40px;
   font-weight: 600;
   border-bottom: 2px solid white;
   margin: 40px auto 20px;
 }
+
 .contact-flex {
   width: 65%;
   display: -webkit-box;
@@ -302,29 +314,31 @@ section {
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   margin: 0 auto;
 }
-.contact-flex h2{
+
+.contact-flex h2 {
   letter-spacing: 3px;
   margin-top: 55px;
   font-size: 32px;
   text-align: center;
 }
-.contact-links{
+
+.contact-links {
   line-height: 6em;
   margin-top: 2em;
   width: 40em;
   -ms-flex-item-align: center;
-      align-self: center;
+  align-self: center;
   margin-left: 10em;
-
 }
-.contact-flex a{
+
+.contact-flex a {
   font-size: 32px;
-  color:white;
+  color: white;
 }
