--- a/css/style.css
+++ b/css/style.css
@@ -251,13 +251,22 @@ section {
 
 .about-flex {
   width: 70%;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  align-items: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   margin: 0 auto;
-  flex-wrap: wrap;
-}
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}au
 
 .about-left{
   font-size: 50px;
